# ferroforge

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SCOREBOARD.md  STATION.md  dashboard.html  eudravigilance_live_dashboard.html  glama.json  golf-course.html  hub-mapping.json  llms-install.md  mcp-server.json  requirements.txt  server.json  station-healthcheck.sh  station-launch.sh  station-persistent.sh
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
_wip_modules/preemptive_pv/: mod.rs
_wip_modules/signal_theory/: mod.rs
chains/: signal-drift-monitoring.yaml
configs/: abbvie.json  adventure.json  adversarial.json  agent-intel.json  alexion.json  algovigilance.json  amgen.json  anatomy.json  antivector.json  anvisa.json  api-ops.json  api-pharmgkb-org.json  asm.json  astellas.json  astrazeneca.json  audio.json  autopilot.json  bayer.json  benefit-risk.json  bicone.json  biogen.json  bms.json  body-systems.json  boehringer.json  brain.json  calculation.json  cargo.json  cartography.json  cccp.json  celltrion.json  cep.json  chemistry.json  chemivigilance.json  cioms.json  cipla.json  claude-ai.json  clinicaltrials.json  cloud.json  code-analysis.json  cofepris.json  (+208 more)
crates/borrow_miner/: Cargo.toml  README.md
crates/borrow_miner/src/: main.rs
crates/station/: Cargo.toml  Cargo.toml.local  build.rs
crates/station/src/: auth.rs  billing_api.rs  config.rs  gcp.rs  lib.rs  main.rs  metering.rs  nexcore_bridge.rs  pricing.rs  protocol.rs  rate_limit.rs  relay_runner.rs  router.rs  server.rs  server_combined.rs  server_http.rs  server_sse.rs  server_streamable.rs  telemetry.rs  usage_store.rs
crates/station/src/academy/: mod.rs
crates/station/src/algovigilance/: mod.rs
crates/station/src/autopilot/: mod.rs
crates/station/src/benefit_risk/: mod.rs
crates/station/src/bicone/: mod.rs
crates/station/src/brain/: mod.rs
crates/station/src/cccp/: mod.rs
crates/station/src/chemivigilance/: mod.rs
crates/station/src/combinatorics/: mod.rs
crates/station/src/compliance/: mod.rs
crates/station/src/compute/: causality.rs  chemistry.rs  epidemiology.rs  mod.rs  pharmacology.rs  signals.rs  statistics.rs  vigilance.rs
crates/station/src/crystalbook/: mod.rs
crates/station/src/cybercinetics/: mod.rs
crates/station/src/dataframe/: mod.rs
crates/station/src/dna_compute/: mod.rs
crates/station/src/dtree/: mod.rs
crates/station/src/edit_distance/: mod.rs
crates/station/src/energy/: mod.rs
crates/station/src/entropy/: mod.rs
crates/station/src/epidemiology/: mod.rs
crates/station/src/fda_guidance/: mod.rs
crates/station/src/fhir/: mod.rs
crates/station/src/formula/: mod.rs
crates/station/src/game_theory/: mod.rs
crates/station/src/harm_taxonomy/: mod.rs
crates/station/src/heligram/: mod.rs
crates/station/src/helix/: mod.rs
crates/station/src/hopper/: extremis.rs  mod.rs
crates/station/src/marketing/: mod.rs
crates/station/src/markov/: mod.rs
crates/station/src/molecular_weight/: mod.rs
crates/station/src/moltbook/: mod.rs
crates/station/src/phenotype/: mod.rs
crates/station/src/preemptive_pv/: mod.rs
crates/station/src/primitives/: mod.rs
crates/station/src/pvdsl/: mod.rs
crates/station/src/relay/: mod.rs
crates/station/src/science/: genomics.rs  hexim1.rs  http.rs  mod.rs  targets.rs
crates/station/src/signal_pipeline/: mod.rs
crates/station/src/signal_theory/: mod.rs
crates/station/src/stem/: mod.rs
crates/station/src/stoichiometry/: mod.rs
crates/station/src/tov/: mod.rs
crates/station/src/tov_proofs/: mod.rs
crates/station/src/zeta/: mod.rs
crates/station/tests/: compute_parity.rs  integration.rs
domains/: batch-2026-03-29.yaml  batch-2026-03-31.yaml  example-batch.yaml  mesh-linkages-2026-03-31.yaml
examples/: README.md  crewai-nexvigilant.py  langchain-nexvigilant.py
hub/: app.py  seed.py
knowledge/: dna-portfolio-mapping.md
micrograms/: algo-converge-signal.yaml  algo-energy-measure.yaml  algo-locate-root-cause.yaml  algo-seal-commitment.yaml  algo-select-triage.yaml  algo-validation-to-assessment-bridge.yaml  algo-void-scan.yaml  risk-score-classifier.yaml  session-velocity.yaml  signal-collapse-gate.yaml
micrograms/flywheel/: flywheel-composite.yaml  momentum-tracker.yaml  velocity-check.yaml
relays/: causality-chain.yaml  competitive-landscape.yaml  drug-profile.yaml  extremis-investigation.yaml  full-investigation.yaml  label-check.yaml  literature-review.yaml  pipe-prev.yaml  regulatory-intel.yaml  relay.py  signal-pipeline.yaml
scripts/: README.md  academy_proxy.py  accessdata_proxy.py  api_pharmgkb_org_proxy.py  calculation_proxy.py  cartography_proxy.py  check_adr.py  cioms_ch_proxy.py  cioms_proxy.py  claude_ai_proxy.py  clinicaltrials_proxy.py  config_forge.py  covenant_proxy.py  ctdbase_org_proxy.py  daemon_proxy.py  dailymed_proxy.py  dcs_proxy.py  dead_tool_monitor.py  deploy-cloud-run.sh  dispatch.py  dispatch_daemon.py  drugbank_proxy.py  ema_proxy.py  eudravigilance_live_ema_europa_eu_proxy.py  eudravigilance_proxy.py  fda_safety_proxy.py  forge.py  forge_from_crates.py  forge_nucleus.py  gate_dispatch.py  gate_outputschema.py  glass_notebook_proxy.py  go_drugbank_com_proxy.py  guardian_engine_proxy.py  harden_proxies.py  ich_org_proxy.py  ich_proxy.py  key_rotator.py  lilly_proxy.py  linkedin_oauth.py  (+50 more)
