[workspace]
resolver = "2"
members = [
    "crates/borrow_miner",
    "crates/station",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["NexVigilant LLC"]
license = "MIT"
repository = "https://github.com/nexvigilant/ferroforge"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.16", features = ["v4"] }
tokio-stream = "0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.fast-compile]
inherits = "dev"
opt-level = 0
