[package]
name = "borrow_miner"
version = "0.1.0"
edition = "2024"
description = "Psychologically satisfying arcade mining game teaching Rust ownership"
authors = ["NexVigilant LLC"]
license = "MIT"
repository = "https://github.com/nexvigilant/borrow-miner"
keywords = ["game", "bevy", "rust", "educational", "arcade"]
categories = ["games", "education"]

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
rodio = "0.19"
rand = "0.8"
rand_chacha = "0.3"
instant = "0.1"

[dev-dependencies]
criterion = "0.5"
