[package]
name = "borrow_miner"
version.workspace = true
edition.workspace = true
description = "Psychologically satisfying arcade mining game teaching Rust ownership"
authors.workspace = true
license.workspace = true
repository = "https://github.com/nexvigilant/borrow-miner"
keywords = ["game", "bevy", "rust", "educational", "arcade"]
categories = ["games", "education"]

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
rodio = "0.19"
rand = "0.8"
rand_chacha = "0.3"
instant = "0.1"

[dev-dependencies]
criterion = "0.5"
