[package]
name = "nexvigilant-station"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NexVigilant Station — MCP server hub for agent traffic routing"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
subtle = "2.6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
