[package]
name = "nexvigilant-station"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NexVigilant Station — MCP server hub for agent traffic routing"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = "0.8"
ureq = { version = "2.12", features = ["json"] }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
subtle = "2.6"
sha2 = "0.10"

# NexCore domain crates — Station depends on nexcore for computation
nexcore-pv-core = { path = "../../../Projects/Active/nexcore/crates/nexcore-pv-core" }
nexcore-qbr = { path = "../../../Projects/Active/nexcore/crates/nexcore-qbr" }
nexcore-primitives = { path = "../../../Projects/Active/nexcore/crates/nexcore-primitives" }
nexcore-constants = { path = "../../../Projects/Active/nexcore/crates/nexcore-constants" }
nexcore-error = { path = "../../../Projects/Active/nexcore/crates/nexcore-error" }
nexcore-signal-theory = { path = "../../../Projects/Active/nexcore/crates/nexcore-signal-theory" }
nexcore-stoichiometry = { path = "../../../Projects/Active/nexcore/crates/nexcore-stoichiometry" }
nexcore-lex-primitiva = { path = "../../../Projects/Active/nexcore/crates/nexcore-lex-primitiva" }
nexcore-preemptive-pv = { path = "../../../Projects/Active/nexcore/crates/nexcore-preemptive-pv" }
nexcore-combinatorics = { path = "../../../Projects/Active/nexcore/crates/nexcore-combinatorics" }
stem-math = { path = "../../../Projects/Active/nexcore/crates/stem-math" }
nexcore-signal-pipeline = { path = "../../../Projects/Active/nexcore/crates/nexcore-signal-pipeline" }
nexcore-brain = { path = "../../../Projects/Active/nexcore/crates/nexcore-brain" }
nexcore-dataframe = { path = "../../../Projects/Active/nexcore/crates/nexcore-dataframe" }
nexcore-dna = { path = "../../../Projects/Active/nexcore/crates/nexcore-dna" }
nexcore-dtree = { path = "../../../Projects/Active/nexcore/crates/nexcore-dtree" }
nexcore-pvdsl = { path = "../../../Projects/Active/nexcore/crates/nexcore-pvdsl" }
nexcore-tov = { path = "../../../Projects/Active/nexcore/crates/nexcore-tov" }
nexcore-tov-proofs = { path = "../../../Projects/Active/nexcore/crates/nexcore-tov-proofs" }
nexcore-compliance = { path = "../../../Projects/Active/nexcore/crates/nexcore-compliance" }
nexcore-algovigilance = { path = "../../../Projects/Active/nexcore/crates/nexcore-algovigilance" }
nexcore-chemivigilance = { path = "../../../Projects/Active/nexcore/crates/nexcore-chemivigilance" }
nexcore-cccp = { path = "../../../Projects/Active/nexcore/crates/nexcore-cccp" }
nexcore-molcore = { path = "../../../Projects/Active/nexcore/crates/nexcore-molcore" }
nexcore-qsar = { path = "../../../Projects/Active/nexcore/crates/nexcore-qsar" }
nexcore-structural-alerts = { path = "../../../Projects/Active/nexcore/crates/nexcore-structural-alerts" }
nexcore-metabolite = { path = "../../../Projects/Active/nexcore/crates/nexcore-metabolite" }
nexcore-vigilance = { path = "../../../Projects/Active/nexcore/crates/nexcore-vigilance" }
nexcore-fda-guidance = { path = "../../../Projects/Active/nexcore/crates/nexcore-fda-guidance" }
nexcore-phenotype = { path = "../../../Projects/Active/nexcore/crates/nexcore-phenotype" }
nexcore-transcriptase = { path = "../../../Projects/Active/nexcore/crates/nexcore-transcriptase" }
nexcore-bicone = { path = "../../../Projects/Active/nexcore/crates/nexcore-bicone" }
nexcore-fhir = { path = "../../../Projects/Active/nexcore/crates/nexcore-fhir" }
nexcore-harm-taxonomy = { path = "../../../Projects/Active/nexcore/crates/nexcore-harm-taxonomy" }
nexcore-helix = { path = "../../../Projects/Active/nexcore/crates/nexcore-helix" }
nexcore-zeta = { path = "../../../Projects/Active/nexcore/crates/nexcore-zeta" }
stem-bio = { path = "../../../Projects/Active/nexcore/crates/stem-bio" }
stem-phys = { path = "../../../Projects/Active/nexcore/crates/stem-phys" }
stem-complex = { path = "../../../Projects/Active/nexcore/crates/stem-complex" }
stem-number-theory = { path = "../../../Projects/Active/nexcore/crates/stem-number-theory" }
stem-topology = { path = "../../../Projects/Active/nexcore/crates/stem-topology" }
nexcore-edit-distance = { path = "../../../Projects/Active/nexcore/crates/nexcore-edit-distance" }
nexcore-energy = { path = "../../../Projects/Active/nexcore/crates/nexcore-energy" }
academy-forge = { path = "../../../Projects/Active/nexcore/crates/academy-forge" }
nexcore-academy = { path = "../../../Projects/Active/nexcore/crates/nexcore-academy" }

[dev-dependencies]
tempfile = "3"
